name          : hello
version       : 0.1.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Haskell hello world
description   : Haskell hello world
category      : Web
author        : Anupam Jain
data-dir      : ""

executable hello
    build-depends    : base >= 4.7  && < 5
                     , wai
                     , wai-routes
                     , wai-extra
                     , warp
                     , text
    main-is          : Main.hs
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall -O2
    hs-source-dirs : src
